--- a/index.html
+++ b/index.html
@@ -99,18 +99,21 @@
             <div class="services-box">
                 <i class='bx bx-code-alt'></i>
                 <h3>Web Development</h3>
+		<img src="images/laptop_on_table.jpg" alt="">
                 <p>In this digital realm, I transform ideas into interactive and visually stunning web experiences. As a passionate web developer, I specialize in creating dynamic and user-centric websites that leave a lasting impression.With a keen eye for design and a love for clean, efficient code, I bring concepts to life, combining creativity with the latest technologies. Whether it's front-end magic to captivate users or back-end wizardry for seamless functionality, I thrive on turning challenges into opportunities. Explore my portfolio to witness the fusion of art and technology, where every line of code tells a story. Let's build the future of the web together!</p>
                 <a href="#" class="btn">Read More</a>
             </div>
             <div class="services-box">
                 <i class='bx bx-line-chart-down' ></i>
                 <h3>Digital Marketing</h3>
-                 <p>I am a dedicated and results-driven digital marketing professional excited about the opportunity to contribute to Client's success. With a proven track record in executing comprehensive digital strategies, I bring a unique blend of creativity and data-driven decision-making.</p>
+		<img src="images/digital_marketing.jpg" alt="">
+                <p>I am a dedicated and results-driven digital marketing professional excited about the opportunity to contribute to Client's success. With a proven track record in executing comprehensive digital strategies, I bring a unique blend of creativity and data-driven decision-making.</p>
                 <a href="#" class="btn">Read More</a>
             </div>
             <div class="services-box">
                 <i class='bx bxs-palette' ></i>
                 <h3>Graphics Designing</h3>
+		<img src="images/edit.jpg" alt="">
                 <p>I'm a passionate graphic designer known for translating concepts into captivating visual narratives. With a flair for creativity and a meticulous eye for detail, I specialize in:
                     Visual Storytelling: Crafting compelling designs that convey brand stories and messages effectively.
                     Brand Identity: Developing and maintaining cohesive brand aesthetics across various platforms and mediums.
@@ -121,6 +124,7 @@
             <div class="services-box">
                 <i class='bx bxs-virus'></i>
                 <h3>Web Security</h3>
+		<img src="images/security_laptop.png" alt="">
                 <p>I'm a results-oriented web security professional dedicated to fortifying digital landscapes against potential threats. With a deep understanding of cybersecurity principles, I specialize in:
                     Vulnerability Assessment: Conducting thorough assessments to identify and mitigate potential security vulnerabilities within web applications.
                     Penetration Testing: Employing ethical hacking techniques to proactively test and strengthen the security posture of digital environments.
