--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Billbright Matege | Software engineer</title>
+    <title>Billbright Matege | Software engineer & CyberSecurity Analyst</title>
 
     <!-- swiper css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
@@ -16,234 +16,19 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <!-- header section start -->
+    <header>
+        <a href="#" class="logo">Billbrigt Matege.</a>
 
-    <!-- header design -->
-    <header class="header">
-        <a href="#" class="logo">Billbright Matege</a>
+        <i class='bx bx-menu' id="menu-icon"></i>
 
-        <nav class="navbar">
+        <nav>
             <a href="#home" class="active">Home</a>
-            <a href="#about">About</a>
-            <a href="#services">Services</a>
-            <a href="#portfolio">Portforlio</a>
+            <a href="#about">Services</a>
+            <a href="#services">Resume</a>
+            <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
         </nav>
-
-        <div class="bx bx-moon" id="darkMode-icon"></div>
     </header>
-
-    <!-- home section design -->
-    <section class="home" id="home">
-        <div class="home-content">
-            <h3>Hello, I am</h3>
-            <h1>Billbright Matege</h1>
-            <P>A software engineer, and am a highly skilled professional who specializes in designing, developing, and maintaining software solutions. My expertise encompasses a wide range of programming languages and technologies. I possess the ability to solve complex problems, write efficient and clean code, and contribute to the creation of innovative software applications. Your role involves collaborating with cross-functional teams, understanding user requirements, and delivering high-quality software products that meet the needs of your clients and users.</P>
-
-            <div class="social-media">
-                <a href="#"><i class='bx bxl-facebook'></i></a>
-                <a href="#"><i class='bx bxl-twitter' ></i></a>
-                <a href="#"><i class='bx bxl-instagram' ></i></a>
-                <a href="#"><i class='bx bxl-linkedin' ></i></a>
-            </div>
-
-            <a href="#" class="btn">Download CV</a>
-        </div>
-        <div class="profession-container">
-            <div class="profession-box">
-                <div class="profession" style="--i:0;">
-                    <i class='bx bx-code-alt'></i>
-                    <h3>Web Development</h3>
-                </div>
-                <div class="profession" style="--i:1;">
-                    <i class='bx bx-camera' ></i>
-                    <h3>Photographer</h3>
-                </div>
-                <div class="profession" style="--i:2;">
-                    <i class='bx bx-palette'></i>
-                    <h3>Web Designer</h3>
-                </div>
-                <div class="profession" style="--i:3;">
-                    <i class='bx bx-video-plus'></i>
-                    <h3>Videographer</h3>
-                </div>
-
-                <div class="circle"></div>
-            </div>
-
-            <div class="overlay"></div>
-        </div>
-
-        <div class="home-img">
-            <img src="images/computer-engineering-science-tech-wallpaper-preview.jpg" alt="">
-        </div>
-    </section>
-
-    <!-- about section design -->
-    <section class="about" id="about">
-        <div class="about-img">
-            <img src="images/IMG-20230115-WA0015.jpg" alt="">
-        </div>
-        <div class="about-content">
-            <h2 class="heading">About <span>Me</span></h2>
-            <h3>Hi, I, Here To Help Your Next Project!</h3>
-            <p>I can contribute to the entire development lifecycle, from understanding client requirements to designing, implementing, testing, and maintaining features like summaries within a web application or software project & also developing and coming up the relevant pictures and graphics neccesary for the project.</p>
-        </div>
-        <a href="#" class="btn">Read More</a>
-    </section>
-
-    <!--service section design-->
-    <section class="services" id="services">
-        <h2 class="heading">My <span>Services</span></h2>
-
-        <div class="services-container">
-            <div class="services-box">
-                <i class='bx bx-code-alt'></i>
-                <h3>Web Development</h3>
-		<img src="images/laptop_on_table.jpg" alt="">
-                <p>In this digital realm, I transform ideas into interactive and visually stunning web experiences. As a passionate web developer, I specialize in creating dynamic and user-centric websites that leave a lasting impression.With a keen eye for design and a love for clean, efficient code, I bring concepts to life, combining creativity with the latest technologies. Whether it's front-end magic to captivate users or back-end wizardry for seamless functionality, I thrive on turning challenges into opportunities. Explore my portfolio to witness the fusion of art and technology, where every line of code tells a story. Let's build the future of the web together!</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-            <div class="services-box">
-                <i class='bx bx-line-chart-down' ></i>
-                <h3>Digital Marketing</h3>
-		<img src="images/digital_marketing.jpg" alt="">
-                <p>I am a dedicated and results-driven digital marketing professional excited about the opportunity to contribute to Client's success. With a proven track record in executing comprehensive digital strategies, I bring a unique blend of creativity and data-driven decision-making.</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-            <div class="services-box">
-                <i class='bx bxs-palette' ></i>
-                <h3>Graphics Designing</h3>
-		<img src="images/edit.jpg" alt="">
-                <p>I'm a passionate graphic designer known for translating concepts into captivating visual narratives. With a flair for creativity and a meticulous eye for detail, I specialize in:
-                    Visual Storytelling: Crafting compelling designs that convey brand stories and messages effectively.
-                    Brand Identity: Developing and maintaining cohesive brand aesthetics across various platforms and mediums.
-                    Adobe Creative Cloud Mastery: Proficient in industry-standard design tools, ensuring seamless creation and manipulation of graphic elements.
-                    Collaborative Design: Engaging in cross-functional collaboration to transform concepts into visually stunning and impactful designs.</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-            <div class="services-box">
-                <i class='bx bxs-virus'></i>
-                <h3>Web Security</h3>
-		<img src="images/security_laptop.png" alt="">
-                <p>I'm a results-oriented web security professional dedicated to fortifying digital landscapes against potential threats. With a deep understanding of cybersecurity principles, I specialize in:
-                    Vulnerability Assessment: Conducting thorough assessments to identify and mitigate potential security vulnerabilities within web applications.
-                    Penetration Testing: Employing ethical hacking techniques to proactively test and strengthen the security posture of digital environments.
-                    Secure Coding Practices: Promoting and implementing secure coding standards to prevent common vulnerabilities at the development level.
-                    Incident Response: Formulating effective incident response plans to swiftly address and mitigate security incidents.
-                    Continuous Monitoring: Implementing robust monitoring solutions for real-time threat detection and response.</p>
-                <a href="#" class="btn">Read More</a>
-        </div>
-    </section>
-
-    <!-- portfolio section design -->
-    <section class="portfolio" id="portfolio">
-        <h2 class="heading">Latest <span>Projects</span></h2>
-
-        <div class="portfolio-container">
-            <div class="portfolio-box">
-                <img src="images/portfolio1.jpg" alt="">
-
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>I am thrilled to share a snapshot of a recent project from my portfolio that encapsulates my passion for innovation and problem-solving as witnessed from my portfolio website.This project is not just a testament to my technical prowess but also reflects my commitment to pushing boundaries and delivering exceptional results.
-                    </p>
-                    <a href="#"><i class='bx bx-link-external' ></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="images/portfolio3.jpg" alt="">
-
-                <div class="portfolio-layer">
-                 <h4>Graphics Designing & Videography</h4>
-                    <p>Hello everyone! As a passionate creator in the realms of graphics design and videography, I pride myself on weaving captivating narratives through pixels and frames. 
-                    Graphics Design:
-                    Immerse yourself in a world where every line, color, and curve serves a purpose. My graphic designs are not just visuals; they're stories waiting to be told. From sleek corporate branding to vibrant artistic expressions, each design is a brushstroke of creativity.
-                    
-                    Videography:
-                    Step into the magic of motion! Through my lens, ordinary moments become extraordinary tales. Whether it's a product showcase, a cinematic journey, or a heartfelt event, my videography captures the essence, turning fleeting instants into timeless memories.</p>
-                    <a href="#"><i class='bx bxs-video-recording' ></i><i class='bx bxs-palette' ></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="images/portfolio2.jpg" alt="">
-
-             <div class="portfolio-layer">
-                    <h4>Web Secuirty</h4>
-                    <p>Greetings, fellow digital enthusiasts! In the vast expanse of the digital universe, I stand as a vigilant defender, specializing in the intricate art of web security.
-                    Why Web Security Matters:
-                    In a world where data is currency, and connectivity is king, ensuring the sanctity of digital spaces is paramount. My passion lies in fortifying the web against cyber threats, creating secure environments where users, businesses, and data can thrive.              
-                    Expertise Highlights:         
-                    Vulnerability Assessment: I navigate the intricate web of codes, identifying potential weak points and fortifying them to safeguard against cyber intrusions.
-                    Penetration Testing: Proactively challenging digital fortresses to strengthen defenses, ensuring that every layer of security stands resilient.
-                    Security Compliance: Navigating the labyrinth of regulations, I ensure that web properties align with the latest security standards, providing peace of mind for clients and users alike. </p>
-                 <a href="#"><i class='bx bxs-shield-alt-2' ></i></a>
-              </div>
-            </div>
-            <div class="portfolio-box">
-              <img src="images/portfolio5.jpg" alt="">
-
-                <div class="portfolio-layer">
-                    <h4>Digital Marketing</h4>
-                    <p>In the dynamic world of online presence, I am your guide, specializing in the art and science of digital marketing. 
-                    Digital Marketing Mastery:
-                    Embark on a journey where clicks transform into conversions, and engagement translates into brand loyalty. My passion lies in crafting digital narratives that not only resonate but also drive tangible results. From social media prowess to SEO sorcery, I bring a holistic approach to your digital strategy.            
-                    Expertise Highlights:                  
-                    Strategic Campaigns: Crafting data-driven campaigns that not only capture attention but also convert leads into loyal customers.
-                    SEO Alchemy: Unraveling the mysteries of search algorithms, I ensure your brand shines in the vast digital landscape.
-                    Social Media Wizardry: From organic growth to targeted ad campaigns, I orchestrate your brand's symphony across social platforms.
-                    💡 Why Partner with Me:
-                    I don't just follow trends; I set them. My approach blends creativity with analytics, ensuring your digital presence not only dazzles but also delivers a measurable impact on your bottom line.</p>
-                    <a href="#"><i class='bx bxs-badge-dollar' ></i></a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- testimonial-container -->
-    <div class="testimonial-container">
-        <h2 class="heading">Valuable <span>Testimonial</span></h2>
-
-        <div class="testimonial-wrapper">
-            <div class="testimonial-box mySwiper">
-                <div class="testimonial-content swiper-wrapper">
-                    <div class="testimonial-slides swiper-slide">
-                        <h3>Roseline D</h3>
-                        <p>Back-end Developer and am alumni of AFRICAN LEADERSHIP XCELERATOR who is aspiring to becoming a fullstack developer.
-                           Telephone Number: +27 74 566 3399
-                           Email Adress: roselinec1308@gmail.com
-                        </p>
-                    </div>
-                    <div class="testimonial-slides swiper-slide">
-                        <h3>Alex Rugema</h3>
-                        <p>Back-end Developer and am alumni of AFRICAN LEADERSHIP XCELERATOR who is aspiring to becoming a fullstack developer.
-                           Telephone Number: +250 781 049 931 
-                        </p>
-                    </div>
-                    <div class="testimonial-slides swiper-slide">
-                        <h3>Bitok Brain</h3>
-                        <p>Back-end Developer and am alumni of AFRICAN LEADERSHIP XCELERATOR who is aspiring to becoming a fullstack developer.
-                           Telephone Number: +256 743 497140
-                           Email Adress: briankipkoech328@gmail.com
-                        </p>
-                    </div>
-                    <div class="testimonial-slides swiper-slide">
-                        <h3>Simon Kirabo</h3>
-                        <p>A Data analytic 
-                           Telephone Number: +256 705 510 002 
-                        </p>
-                    </div>
-                </div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-pagination"></div>
-            </div>
-        </div>
-    </div>
-
-    <!-- swiper js -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
-    <!-- custom js-->
-    <script src="js/script.js"></script>
 </body>
 </html>
