adding more functionality

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <!-- header section start -->
     <header>
-        <a href="#" class="logo">Billbrigt Matege.</a>
+        <a href="#" class="logo">Billbright Matege.</a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
 
@@ -30,5 +30,21 @@
             <a href="#contact">Contact</a>
         </nav>
     </header>
+    <!-- home section end -->
+    <section class="home" id="home">
+        <div class="home-detail">
+            <h1>Billbright Matege</h1>
+            <h2>Software engineer & CyberSecurity Analyst</h2>
+            <p>Hi, I'm Billbright Matege, a software engineer and cybersecurity analyst with a passion for developing software solutions that solve real-world problems. I have experience in developing web applications, mobile applications, and desktop applications. I am also skilled in cybersecurity and have experience in securing web applications, mobile applications, and desktop applications. I am passionate about technology and I am always looking for new challenges to solve.</p>
+            <div class="btn-sci">
+                <a href="#contact" class="btn">Download CV</a>
+                <div class="sci">
+                    <a href="#"><i class='bx bxl-github'></i></a>
+                    <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
+                    <a href="#"><i class='bx bxl-twitter' ></i></a>
+                    <a href="#"><i class='bx bxl-discord-alt' ></i></a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
