more has been modified

--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
         <div class="home-detail">
             <h1>Billbright Matege</h1>
             <h2>Software engineer & CyberSecurity Analyst</h2>
-            <p>Hi, I'm Billbright Matege, a software engineer and cybersecurity analyst with a passion for developing software solutions that solve real-world problems. I have experience in developing web applications, mobile applications, and desktop applications. I am also skilled in cybersecurity and have experience in securing web applications, mobile applications, and desktop applications. I am passionate about technology and I am always looking for new challenges to solve.</p>
+            <p>Hi, I'm Billbright Matege, a software engineer and cybersecurity analyst with a passion for<br>
+                developing software solutions that solve real-world problems.I have experience<br>
+                in developing web applications, mobile applications, and desktop applications.<br>
+                I am also skilled in cybersecurity and have experience in securing web applications,<br>
+                mobile applications, and desktop applications.<br>
+                I am passionate about technology and I am always looking for new challenges to solve.</p>
             <div class="btn-sci">
                 <a href="#contact" class="btn">Download CV</a>
                 <div class="sci">
@@ -43,6 +48,13 @@
                     <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
                     <a href="#"><i class='bx bxl-twitter' ></i></a>
                     <a href="#"><i class='bx bxl-discord-alt' ></i></a>
+            </div>
+        </div>
+        <div class="home-img">
+            <div class="img-box">
+                <div class="img-item">
+                    <img src="images/bill3.png">
+                </div>
             </div>
         </div>
     </section>
