--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
     <section class="home" id="home">
         <div class="home-detail">
             <h1>Billbright Matege</h1>
-            <h2>Software engineer & CyberSecurity Analyst</h2>
+            <h2>Skilled In
+                <span style="--i:4;" data-text="Machine Learning">Machine Learning</span>
+                <span style="--i:3;" data-text="Software Development">Software Development</span><br>
+                <span style="--i:2;" data-text="Cybersecurity">Cybersecurity</span>
+                <span style="--i:1;" data-text="Web Development">Web Development</span>
+            </h2>
             <p>Hi, I'm Billbright Matege, a software engineer and cybersecurity analyst with a passion for<br>
                 developing software solutions that solve real-world problems.I have experience<br>
                 in developing web applications, mobile applications, and desktop applications.<br>
