more have been added

--- a/index.html
+++ b/index.html
@@ -31,14 +31,13 @@
         </nav>
     </header>
     <!-- home section end -->
-    <section class="home" id="home">
+    <section class="home active">
         <div class="home-detail">
             <h1>Billbright Matege</h1>
             <h2>Skilled In
                 <span style="--i:4;" data-text="Machine Learning">Machine Learning</span>
-                <span style="--i:3;" data-text="Software Development">Software Development</span><br>
-                <span style="--i:2;" data-text="Cybersecurity">Cybersecurity</span>
-                <span style="--i:1;" data-text="Web Development">Web Development</span>
+                <span style="--i:3;" data-text="Software Development">Software Engineering</span><br>
+                <span style="--i:2;" data-text="Cybersecurity Analysis">Cybersecurity Analysis</span>
             </h2>
             <p>Hi, I'm Billbright Matege, a software engineer and cybersecurity analyst with a passion for<br>
                 developing software solutions that solve real-world problems.I have experience<br>
@@ -53,6 +52,7 @@
                     <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
                     <a href="#"><i class='bx bxl-twitter' ></i></a>
                     <a href="#"><i class='bx bxl-discord-alt' ></i></a>
+                </div>
             </div>
         </div>
         <div class="home-img">
@@ -60,6 +60,79 @@
                 <div class="img-item">
                     <img src="images/bill3.png">
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- SERVICES SESSION start -->
+
+    <section class="service active">
+        <h2 class="heading">My <span>Expertize</span></h2>
+        <div class="services-container">
+            <div class="services-box">
+                <div class="icon">
+                    <i class='bx bx-code-alt'></i>
+                    <a href="#"><i class='bx bx-arrow-back'></i></a>
+                </div>
+                <h3>Web Development</h3>
+                <p>I have experience in developing web applications using HTML, CSS, JavaScript, Python, and MySQL. I have developed web applications for various clients and I am skilled in developing web applications that are responsive and user-friendly.</p>
+            </div>
+            <div class="services-box">
+                <div class="icon">
+                    <i class='bx bxs-palette' ></i>
+                    <a href="#"><i class='bx bx-arrow-back'></i></a>
+                </div>
+                <h3>UI/UX Design</h3>
+                <p>I have experience in designing beautiful and functional user interfaces. I focus on creating intuitive designs that improve user experience and ensure usability across different platforms.</p>
+            </div>
+            <div class="services-box">
+                <div class="icon">
+                    <i class='bx bxs-virus-block' ></i>
+                    <a href="#"><i class='bx bx-arrow-back'></i></a>
+                </div>
+                <h3>CyberSecurity Analysis</h3>
+                <p>I specialize in securing applications, networks, and systems from cyber threats. I conduct security audits and provide solutions to safeguard your digital infrastructure.</p>
+            </div>
+            <div class="services-box">
+                <div class="icon">
+                    <i class='bx bx-code-curly' ></i>
+                    <a href="#"><i class='bx bx-arrow-back'></i></a>
+                </div>
+                <h3>AI Chatbot Development</h3>
+                <p>Design and develop intelligent chatbots and virtual assistants for customer service, e-commerce, and business automation. These bots can handle common inquiries, perform tasks, and offer personalized experiences</p>
+            </div>
+            <div class="services-box">
+                <div class="icon">
+                    <i class='bx bxs-camera' ></i>
+                    <a href="#"><i class='bx bx-arrow-back'></i></a>
+                </div>
+                <h3>Photo Editing, Graphics & Video Editing</h3>
+                <p>With my expertise in photo editing, graphic design, and video editing, I offer professional services to enhance your visual content. <br>Whether you're looking to touch up personal photos, create eye-catching graphics for your brand, or produce high-quality videos, I provide creative and tailored solutions to bring your ideas to life.</p>
+            </div>
+            <div class="services-box">
+                <div class="icon">
+                    <i class='bx bx-trending-up' ></i>
+                    <a href="#"><i class='bx bx-arrow-back'></i></a>
+                </div>
+                <h3>SEO</h3>
+                <p>As an SEO service provider, I offer comprehensive SEO strategies to help improve your website's visibility and ranking on search engines. This includes keyword research, on-page optimization, technical SEO, content creation, backlink building, and performance tracking.</p>
+            </div>
+            <div class="services-box">
+                <div class="icon">
+                    <i class='bx bxl-digitalocean' ></i>
+                    <a href="#"><i class='bx bx-arrow-back'></i></a>
+                </div>
+                <h3>DeVops Engineering</h3>
+                <p>I offer services to streamline and automate your software development and deployment processes. This includes continuous integration (CI), continuous deployment (CD), infrastructure management, containerization (Docker, Kubernetes), cloud computing (AWS, Azure, GCP), and monitoring solutions.</p>
+            </div>
+        
+            <div class="services-box">
+                <div class="icon">
+                    <i class='bx bx-conversation' ></i>
+                    <a href="#"><i class='bx bx-arrow-back'></i></a>
+                </div>
+                <h3>Consultation</h3>
+                <p>I provide expert advice and guidance to help businesses optimize their technology strategies. My services include assessing and improving software architecture, implementing cybersecurity measures, optimizing development workflows, and advising on best practices for machine learning, DevOps, and more. I work closely with clients to understand their unique needs and offer tailored solutions that drive efficiency, growth, and innovation in their technology-driven projects.</p>
             </div>
         </div>
     </section>
