--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <!-- SERVICES SESSION start -->
 
-    <section class="service active">
+    <section class="services">
         <h2 class="heading">My <span>Expertize</span></h2>
         <div class="services-container">
             <div class="services-box">
@@ -133,6 +133,26 @@
                 </div>
                 <h3>Consultation</h3>
                 <p>I provide expert advice and guidance to help businesses optimize their technology strategies. My services include assessing and improving software architecture, implementing cybersecurity measures, optimizing development workflows, and advising on best practices for machine learning, DevOps, and more. I work closely with clients to understand their unique needs and offer tailored solutions that drive efficiency, growth, and innovation in their technology-driven projects.</p>
+            </div>
+        </div>
+    </section>
+    
+    <!-- RESUME SESSION end -->
+    <section class="resume active">
+        <div class="resume-container">
+            <h2>Why Hire Me</h2>
+            <p class="desc">I bring a unique blend of expertise in software engineering, cybersecurity, Back-end and front-end development, paired with hands-on experience in building user-friendly websites and secure systems. My commitment to continuous learning—evidenced by my ongoing pursuit of professional certifications and academic studies—ensures I stay updated with industry trends. Beyond technical skills, I’m a dedicated team player with a passion for delivering innovative solutions that drive results. Partnering with me means working with someone who values integrity, efficiency, and excellence in every project.</p>
+            <button class="resume-btn active">Experience</button>
+            <button class="resume-btn">Education</button>
+            <button class="resume-btn">Skills</button>
+            <button class="resume-btn">About Me</button>
+        </div>
+
+        <div class="resume-box">
+            <div class="resume-detail experience">
+                <h2 class="heading">My <span>Experience</span></h2>
+                <p>I have gained valuable experience working with WHTa Networks as a Backend Developer, where I focused on designing, developing, and optimizing server-side applications. My role involved building robust APIs, managing databases, and ensuring seamless backend integration to support scalable and efficient systems.<br>
+                    Currently, I am a Software Engineer at Solis Uganda Limited, where I contribute to full-stack development, software architecture design, and project management. I am actively involved in developing innovative solutions, such as jurisMIS Pro, a comprehensive law firm management software. My work emphasizes delivering user-centric designs, maintaining code quality, and collaborating with cross-functional teams to achieve project goals efficiently.</p>
             </div>
         </div>
     </section>
