added some javascript

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="resume-box">
             <div class="resume-detail experience">
                 <h2 class="heading">My <span>Experience</span></h2>
-                <p>I have gained valuable experience working with WHTa Networks as a Backend Developer, where I focused on designing, developing, and optimizing server-side applications. My role involved building robust APIs, managing databases, and ensuring seamless backend integration to support scalable and efficient systems.<br>
+                <p>I have gained valuable experience working with WHTa Networks as a Backend Developer, where I focused on designing, developing, and optimizing server side applications. My role involved building robust APIs, managing databases, and ensuring seamless backend integration to support scalable and efficient systems.<br>
                     Currently, I am a Software Engineer at Solis Uganda Limited, where I contribute to full-stack development, software architecture design, and project management. I am actively involved in developing innovative solutions, such as jurisMIS Pro, a comprehensive law firm management software. My work emphasizes delivering user-centric designs, maintaining code quality, and collaborating with cross-functional teams to achieve project goals efficiently.</p>
             </div>
         </div>
