--- a/index.html
+++ b/index.html
@@ -156,5 +156,8 @@
             </div>
         </div>
     </section>
+
+    <!-- Link to your JavaScript file -->
+    <script src="js/script.js"></script>
 </body>
 </html>
