--- a/index.html
+++ b/index.html
@@ -161,7 +161,72 @@
             </div>
             <div class="resume-detail skills">
                 <h2 class="heading">My <span>Skills</span></h2>
-                
+                <div class="skills-container">
+                    <div class="skill-item">
+                        <i class='bx bxl-mysql'></i>
+                        <span>MySQL</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bxl-mongodb'></i>
+                        <span>MongoDB</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bxl-postgresql'></i>
+                        <span>PostgreSQL</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bx-code-alt'></i>
+                        <span>RESTful APIs</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bxl-python'></i>
+                        <span>Python</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bxl-react'></i>
+                        <span>React</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bxl-vite'></i>
+                        <span>Vite.js</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bxl-tailwind-css'></i>
+                        <span>Tailwind CSS</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bxl-javascript'></i>
+                        <span>JavaScript</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bx-bug'></i>
+                        <span>Problem-Solving & Debugging</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bxl-git'></i>
+                        <span>Git</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bxl-github'></i>
+                        <span>GitHub</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bx-shield'></i>
+                        <span>Cybersecurity</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bxl-nodejs'></i>
+                        <span>Node.js</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bxl-django'></i>
+                        <span>Django</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bxl-python'></i>
+                        <span>Python-Flask</span>
+                    </div>
+                </div>
             </div>
             <div class="resume-detail about">
                 <h2 class="heading">About <span>Me</span></h2>
