--- a/index.html
+++ b/index.html
@@ -152,12 +152,56 @@
             <div class="resume-detail experience active">
                 <h2 class="heading">My <span>Experience</span></h2>
                 <p>I have gained valuable experience working with WHTa Networks as a Backend Developer, where I focused on designing, developing, and optimizing server side applications. My role involved building robust APIs, managing databases, and ensuring seamless backend integration to support scalable and efficient systems.<br>
-                    Currently, I am a Software Engineer at Solis Uganda Limited, where I contribute to full-stack development, software architecture design, and project management. I am actively involved in developing innovative solutions, such as jurisMIS Pro, a comprehensive law firm management software. My work emphasizes delivering user-centric designs, maintaining code quality, and collaborating with cross-functional teams to achieve project goals efficiently.</p>
+                    Currently, I am a Software Engineer at Solis Uganda Limited, 
+                    where I contribute to full-stack development, software architecture design, and project management. 
+                    I am actively involved in developing innovative solutions, such as jurisMIS Pro, a comprehensive 
+                    law firm management software. My work emphasizes delivering user-centric designs, 
+                    maintaining code quality, and collaborating with cross-functional teams to achieve project goals efficiently.
+                </p>
+                <div class="resume-list">
+                    <div class="resume-item">
+                        <p class="year">2019 - 2022</p>
+                        <h3>Photographer | Videographer | Graphic Designer</h3>
+                        <p class="company">The City Church - Luzira</p>
+                        <p>  
+                        At <strong>The City Church</strong>, I served as a Photographer and Graphics Designer.<br>  
+                        I captured high-quality images for events, services, and promotional materials.<br>  
+                        Additionally, I designed visually appealing graphics for social media, banners, and church programs, enhancing the church's visual identity and online presence.  
+                        </p>
+                    </div>
+                    <div class="resume-item">
+                        <p class="year">2022 - 2023</p>
+                        <h3>Back-End Developer</h3>
+                        <p class="company">wHTa Networks</p>
+                        <p>  
+                        During my time at WHTa Networks, I focused on designing and developing reliable backend systems.<br>  
+                        I implemented secure APIs, optimized database performance, and ensured smooth integration between different application modules.<br>  
+                        My contributions enhanced system efficiency and supported the company's digital transformation goals.  
+                        </p>
+                    </div>
+                    <div class="resume-item">
+                        <p class="year">2023 - Present</p>
+                        <h3>IT Officer</h3>
+                        <p class="company">Solis Uganda Limited</p>
+                        <p>  
+                           At Solis Uganda Limited, I contributed to the development of <strong>jurisMIS Pro</strong>, a robust law firm management software.<br>  
+                          My role involved backend and frontend development, ensuring seamless user experiences and secure system integrations.<br>  
+                           I collaborated closely with cross-functional teams to deliver efficient and scalable software solutions.  
+                        </p> 
+                    </div>
+                </div>
             </div>
             <div class="resume-detail education">
                 <h2 class="heading">My <span>Education</span></h2>
-                <p>I have gained valuable experience working with WHTa Networks as a Backend Developer, where I focused on designing, developing, and optimizing server side applications. My role involved building robust APIs, managing databases, and ensuring seamless backend integration to support scalable and efficient systems.<br>
-                    Currently, I am a Software Engineer at Solis Uganda Limited, where I contribute to full-stack development, software architecture design, and project management. I am actively involved in developing innovative solutions, such as jurisMIS Pro, a comprehensive law firm management software. My work emphasizes delivering user-centric designs, maintaining code quality, and collaborating with cross-functional teams to achieve project goals efficiently.</p>
+                <p>  
+                    My name is Matege Billbright, a passionate and dedicated software engineer and cybersecurity analyst with a strong foundation in both front-end and back-end technologies.<br>  
+                    I have earned a Certificate in Backend Development from African Leadership, equipping me with advanced server-side programming skills and robust database management expertise.<br>  
+                    Additionally, I hold a Certificate in Frontend Development from META, where I mastered modern UI/UX design principles and interactive web development techniques.<br>  
+                    To strengthen my cybersecurity knowledge, I acquired a Professional Cybersecurity Analysis Certificate from GOOGLE, enabling me to identify vulnerabilities, safeguard systems, and ensure digital security.<br>  
+                    Furthermore, I completed a Diploma in Machine Learning with Python from Alison, gaining valuable experience in data analysis, predictive modeling, and AI-driven solutions.<br>  
+                    Currently, I am pursuing a Diploma in Computer Science at Kampala International University to deepen my technical expertise and prepare myself for greater challenges in the ever-evolving tech industry.<br>  
+                    My commitment to continuous learning and growth drives me to excel in every opportunity I encounter.  
+                </p>                     
             </div>
             <div class="resume-detail skills">
                 <h2 class="heading">My <span>Skills</span></h2>
@@ -230,8 +274,14 @@
             </div>
             <div class="resume-detail about">
                 <h2 class="heading">About <span>Me</span></h2>
-                <p>I have gained valuable experience working with WHTa Networks as a Backend Developer, where I focused on designing, developing, and optimizing server side applications. My role involved building robust APIs, managing databases, and ensuring seamless backend integration to support scalable and efficient systems.<br>
-                    Currently, I am a Software Engineer at Solis Uganda Limited, where I contribute to full-stack development, software architecture design, and project management. I am actively involved in developing innovative solutions, such as jurisMIS Pro, a comprehensive law firm management software. My work emphasizes delivering user-centric designs, maintaining code quality, and collaborating with cross-functional teams to achieve project goals efficiently.</p>
+                <p>  
+                    Hi, I'm <strong>Matege Billbright</strong>, a passionate and results driven <strong>Software Engineer</strong> and <strong>Cybersecurity Analyst</strong> with expertise in both front-end and back-end development.<br>  
+                    I hold certifications in <strong>Backend Development</strong> from African Leadership, <strong>Frontend Development</strong> from META, and a <strong>Professional Cybersecurity Analysis</strong> certificate from GOOGLE.<br>  
+                    Additionally, I’ve earned a <strong>Diploma in Machine Learning with Python</strong> from Alison, enhancing my skills in data analysis, predictive modeling, and artificial intelligence.<br>  
+                    Currently, I am pursuing a <strong>Diploma in Computer Science</strong> at <strong>Kampala International University</strong> to further expand my technical knowledge and capabilities.<br>  
+                    Beyond my academic achievements, I am deeply committed to building innovative tech solutions, securing digital spaces, and empowering others through technology.<br>  
+                    I believe in continuous learning, resilience, and making a positive impact through my skills and expertise.  
+                </p>
             </div>
         </div>
     </section>
