--- a/index.html
+++ b/index.html
@@ -160,13 +160,13 @@
                 </p>
                 <div class="resume-list">
                     <div class="resume-item">
-                        <p class="year">2019 - 2022</p>
+                        <p class="year">2020 - present</p>
                         <h3>Photographer | Videographer | Graphic Designer</h3>
                         <p class="company">The City Church - Luzira</p>
                         <p>  
-                        At <strong>The City Church</strong>, I served as a Photographer and Graphics Designer.<br>  
-                        I captured high-quality images for events, services, and promotional materials.<br>  
-                        Additionally, I designed visually appealing graphics for social media, banners, and church programs, enhancing the church's visual identity and online presence.  
+                        At <strong>The City Church</strong>, I serve as a Photographer and Graphics Designer.<br>  
+                        I capture high-quality images for events, services, and promotional materials.<br>  
+                        Additionally, I design visually appealing graphics for social media, banners, and church programs, enhancing the church's visual identity and online presence.  
                         </p>
                     </div>
                     <div class="resume-item">
